# redis-example

./: CMakeLists.txt  README.md  base-dockerfile  cluster-dockerfile  compose.yml  set-up-cluster.sh  supervisord.conf  test.cpp
cluster-files/7000/: redis.conf
cluster-files/7001/: redis.conf
cluster-files/7002/: redis.conf
cluster-files/7003/: redis.conf
cluster-files/7004/: redis.conf
cluster-files/7005/: redis.conf
